<resources>
    <string name="app_name">닥터차</string>
    <string name="tt_LocationActivity">닥터차</string>
    <string name="action_settings">Settings</string>

    <string name="tt_maincategory">메인 카테고리</string>
    <string name="tt_subcategory">서브 카테고리</string>

    <!--
    모든 TabLayout에서 사용되는 menu title
    -->

    <string name="mt_shoplist">업체</string> <!--목록 생략-->
    <string name="mt_caseforrepair">시공사례</string>
    <string name="mt_casefordeal">매매사례</string>
    <string name="mt_review">고객리뷰</string>
    <string name="mt_news">새소식</string>
    <string name="mt_cabinet">보관함</string>


    <!--
    <string-array name="category_nm">
        <item>새차</item>
        <item>중고차</item>
        <item>새바이크</item>
        <item>중고바이크</item>
        <item>렌트카</item>

        <item>정비전문</item>
        <item>사고수리</item>
        <item>외형복원</item>
        <item>기타복원</item>
        <item>광택/코팅</item>
        <item>썬틴/PPF</item>
        <item>유리</item>
        <item>타이어/휠</item>
        <item>튜닝</item>
        <item>네비/블박</item>
        <item>시트</item>
        <item>오디오</item>
        <item>LED/용품</item>
        <item>수입차</item>
        <item>바이크</item>

        <item>보험</item>
        <item>부품</item>
        <item>검사</item>
        <item>폐차</item>
        <item>긴급출동</item>
        <item>주유/충전</item>
        <item>세차</item>
        <item>주차</item>

        <item>카스카페</item>
        <item>공지사항</item>
        <item>핫이벤트</item>
        <item>지식백과</item>
        <item>벼룩시장</item>
        <item>카메거진</item>
        <item>Funny</item>
        <item>게임</item>
        <item>차계부</item>
        <item>중고차</item>
    </string-array>
    -->

    <!--
    <string-array name="car_option_category">
        <item>외관</item>
        <item>내장</item>
        <item>안전</item>
        <item>편의</item>
        <item>A/V, 네비게이션</item>
        <item>운전자 보조시스템</item>
    </string-array>
    -->

    <!--
    <string-array name="car_photo_area">
        <item>정면(번호판포함)</item>
        <item>후면(번호판포함)</item>
        <item>좌측면</item>
        <item>우측면</item>
        <item>실내</item>
        <item>계기판</item>
        <item>추가1</item>,
        <item>추가2</item>
        <item>추가3</item>
    </string-array>
    -->

    <string-array name="ctk_list">
        <item>오토</item>
        <item>수동</item>
        <item>세미오토</item>
        <item>CVT</item>
        <item>기타</item>
    </string-array>

    <string-array name="cpk_list">
        <item>가솔린</item>
        <item>디젤</item>
        <item>LPG</item>
        <item>가솔린,LPG</item>
        <item>가솔린,전기</item>
        <item>디젤,전기</item>
        <item>LPG,전기</item>
        <item>전기</item>
        <item>가솔린,CNG</item>
        <item>기타</item>
    </string-array>

    <string-array name="cak_list">
        <item>무사고</item>
        <item>유사고</item>
        <item>잘모름</item>
    </string-array>

    <string-array name="cwk_list">
        <item>무침수</item>
        <item>유침수</item>
        <item>잘모름</item>
    </string-array>

    <string name="favorite_add_remove_description">즐겨찾기 %s 모드 진행중입니다</string> <!--삭제, 추가-->
    <string name="favorite_add_word">추가</string> <!--삭제, 추가-->
    <string name="favorite_remove_word">삭제</string> <!--삭제, 추가-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">로그인</string>

    <!-- Strings related to login -->
    <string name="prompt_em">이메일</string>
    <string name="prompt_hn">전화번호</string>
    <string name="prompt_nm">이름</string>
    <string name="prompt_nn">닉네임</string>
    <string name="prompt_upw">비밀번호</string>

    <string name="action_confirm">확인</string>
    <string name="action_cancel">확인</string>
    <string name="action_login">로그인</string>
    <string name="action_login_short">로그인</string>
    <string name="action_reg">간편 회원가입</string>
    <string name="action_reg_short">회원가입</string>
    <string name="action_app_exit">앱종료</string>

    <string name="error_invalid_minLength">%1$d자리 이상이 필요합니다.</string>
    <string name="error_invalid_email">%s의 형식이 잘못되었습니다</string>
    <string name="error_invalid_required">필수입력 항목입니다</string>

    <string name="error_duplicate_memberinfo">다른 회원님이 이미 사용중입니다</string>
    <string name="error_incorrect_login">닉네임 또는 비밀번호가 잘못되었습니다</string>

    <string name="permission_rationale">"전화번호 확인을 위한 승인이 필요합니다"</string>

    <!--kakao_scheme = kakao + kakao_app_key-->
    <string name="kakao_app_key">8f5249a87efa346f996179d56346a45c</string>
    <string name="kakao_scheme">kakao8f5249a87efa346f996179d56346a45c</string>
    <string name="kakaolink_host">kakaolink</string>
</resources>

    <!--
<resources>
    <string name="app_name">CarsGram</string>
    <string name="action_settings">Settings</string>
</resources>

-->
